--- a/HedgeFundProject/conf/application.conf
+++ b/HedgeFundProject/conf/application.conf
@@ -1,9 +1,15 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
-slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
-slick.dbs.default.db.driver = "com.mysql.cj.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/testdb"
-slick.dbs.default.db.user = "root"
-slick.dbs.default.db.password = "Sunnyreddy@30"
-slick.dbs.default.db.numThreads = 5
-slick.dbs.default.db.maxConnections = 10
+MySQL = {
+  driver = "slick.driver.MySQLDriver$"
+  db {
+    host = "localhost"
+    port = "3306"
+    databaseName = "test"
+    url = "jdbc:mysql://"${MySQL.db.host}":"${MySQL.db.port}"/"${MySQL.db.databaseName}
+    driver = com.mysql.jdbc.Driver
+    user = "root"
+    password = "Root"
+    maxThreads = 5
+  }
+}
