--- a/HedgeFundProject/conf/application.conf
+++ b/HedgeFundProject/conf/application.conf
@@ -7,3 +7,8 @@ slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = "Sunnyreddy@30"
 slick.dbs.default.db.numThreads = 5
 slick.dbs.default.db.maxConnections = 10
+
+play.filters.csrf.header.bypassHeaders {
+  X-Requested-With = "*"
+  Csrf-Token = "nocheck"
+}
