Add Email sender

--- a/HedgeFundProject/conf/application.conf
+++ b/HedgeFundProject/conf/application.conf
@@ -2,8 +2,18 @@
 
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.cj.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/testdb"
+slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/test"
 slick.dbs.default.db.user = "root"
-slick.dbs.default.db.password = "Sunnyreddy@30"
+slick.dbs.default.db.password = "Root"
 slick.dbs.default.db.numThreads = 5
 slick.dbs.default.db.maxConnections = 10
+
+play {
+  mailer {
+    host = "smtp.gmail.com"
+    port=465
+    ssl=yes
+    user = "2020hedgetest@gmail.com"
+    password = "POIpoi123"
+  }
+}
