--- a/HedgeFundProject/conf/application.conf
+++ b/HedgeFundProject/conf/application.conf
@@ -2,9 +2,9 @@
 
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.cj.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/test"
+slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/testdb"
 slick.dbs.default.db.user = "root"
-slick.dbs.default.db.password = "Root"
+slick.dbs.default.db.password = "Sunnyreddy@30"
 slick.dbs.default.db.numThreads = 5
 slick.dbs.default.db.maxConnections = 10
 
